# Kaggle-mcp

./: .gitignore  LICENSE  README.md  pyproject.toml
kaggle_mcp/: __init__.py  __main__.py  server.py
